2005-09-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message-partial.c (header_copy): Only set the value
	if the value is non-NULL. Thanks to Peter Bloomfield for this fix.

2005-08-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated version

	* configure.in: Bumped version to 2.1.16

2005-08-18  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: Install gmime-api.xml into gapi-2.0

2005-08-17  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Require gtk-sharp 2 for the mono bindings.

	* mono/GMime.metadata: Rename a few items that the gtk-sharp 2
	parser added.

	* mono/gmime-api.raw: Regengerate this using the gtk-sharp 2
	parser.

2005-08-16  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: libexecdir isn't right; we should be using
	$prefix/lib instead.

2005-07-12  Jeffrey Stedfast  <fejj@novell.com>

	* mono/Makefile.am: libexecdir fixes by Stanislav

	* gmime/internet-address.c: Fixes to various functions that used
	incorrect g_return*_if_fail variants. Thanks to sbrabec@suse.cz

2005-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_date): Handle
	the case where the number of tokens returned from datetok is 0
	which can happen if broken software sends an empty Date: header.

2005-06-13  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.5

	* gmime/gmime-parser.c (parser_step_headers): Don't check
	inptr[-1] unless inptr > start

2005-06-10  Joe Shaw  <joeshaw@novell.com>

	* mono/Stream.custom (CopyToStream): Check to see if
	byte_array.data is IntPtr.Zero and don't try to copy if it is.

2005-06-10  Joe Shaw  <joeshaw@novell.com>

	* mono/DataWrapper.custom: Added.  Adds a WriteToStream() overload
	which takes a System.IO.Stream.

	* mono/Header.custom: Ditto.

	* mono/Makefile.am: Add DataWrapper.custom and Header.custom to
	customs.

	* mono/Object.custom: Remove the GetData() method... it was rather